# Logger

./: CMakeLists.txt  README.md  main.cpp  main_test.cpp
include/logger/: Logger.hpp
src/: Logger.cpp
tests/: gtest.cpp
